# tretis

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: main.c  main.cpp
